k8s/student-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-service
spec:
  type: LoadBalancer
  selector:
    app: student-registration
  ports:
    - port: 80
      targetPort: 8080
